examples/good/different_return_type.soy
func diff_return(x = int) {
    if (x == 0) {
        return "Zero!";
    }
    return x;
}

# d is `str`
d = diff_return(0);
print(d); # Zero!

# e is `int`
e = diff_return(1);
print(e); # 1