examples/bad/different_return_type.soy
def diff_return(x = int) -> int {
    if (x == 0) {
        return "Zero!";
    }
    return x;
}